--- a/views/commitee.ejs
+++ b/views/commitee.ejs
@@ -14,27 +14,20 @@
     <%- include("partials/header")%>
         <section class="front-page">
             <div class="container-fluid bg-overlay">
+                <video autoplay muted loop id="myVideo">
+                    <source src="../public/logo/video.mp4" type="video/mp4">
+                </video>
                 <div class="head-box">
                     <h1>COMMITTEES 2023</h1>
                 </div>
                 <div class="comm-detail">
-                    <p>The Committees and Topics – While many other conferences are becoming almost entirely
-                        crisis-focused and adding a
-                        plethora of non-traditional UN committees, DYPIMUN commits to traditional United Nations bodies
-                        and committees which
-                        stress substantive debate of the most pressing issues in the world today. We believe that
-                        students benefit most from
-                        such debate and real-world topics, and that DYPIMUN provides the perfect environment for serious
-                        and informative
-                        discussion on a global scale. We further believe that MUN should be about diplomacy and
-                        cooperation rather than
-                        competition. As such, we prioritize the educational aspects of the MUN experience, not an
-                        environment where students are
-                        only focused on “winning” the competition. Our students, often years or even decades later, tell
-                        us that the learning
-                        experience they had at DYPIMUN was transformative in their lives and helped them develop the
-                        skills they needed to
-                        identify their areas of passion and pursue their future careers.</p>
+                    <p> While many other conferences are becoming almost entirely crisis-focused and adding a
+                    plethora of non-traditional UN committees, DYPIMUN commits to traditional United Nations bodies and committees which
+                    stress substantive debate of the most pressing issues in the world today. We believe that students benefit most from
+                    such debate and real-world topics, and that DYPIMUN provides the perfect environment for serious and informative
+                    discussion on a global scale. We further believe that MUN should be about diplomacy and cooperation rather than
+                    competition. As such, we prioritize the educational aspects of the MUN experience, not an environment where students are
+                    only focused on “winning” the competition.</p>
                 </div>
             </div>
 
@@ -55,7 +48,7 @@
                         <div class="text-container left-text">
                             <div class="text-box">
                                 <h2>
-                                    Disarament and International Security Committee (UNGA 1st Committee)
+                                    Disarmament and International Security Committee (UNGA 1st Committee)
                                 </h2>
                                 <p>The First Committee deals with disarmament, global challenges and threats to peace
                                     that
@@ -65,6 +58,11 @@
                                     regime.
                                     Agenda -</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -96,6 +94,11 @@
                                     communications technologies for development; and implementation of the New Urban
                                     Agenda.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -128,6 +131,11 @@
                                     working
                                     groups as mandated by the Human Rights Council.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -171,6 +179,11 @@
                                     and
                                     International cooperation in the peaceful uses of outer space.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -200,6 +213,11 @@
                                     three pillars of
                                     sustainable development-economic, social and environmental.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -227,6 +245,11 @@
                                     covered by the
                                     Charter of the United Nations.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -255,6 +278,11 @@
                                     are obligated to
                                     comply with Council decisions.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -280,6 +308,11 @@
                                     our planet. We work to strengthen the intellectual and moral solidarity of
                                     humankind.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -309,6 +342,11 @@
                                     analysis,
                                     facilitate consensus-building, and offer technical assistance.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -340,6 +378,11 @@
                                     world
                                     population.</p>
                             </div>
+                            <!-- button link</div> -->
+                            <!-- <div class="button-class">
+                                <a href="#" class="btn btn-primary btn btn-info">EB and Agendas</a>
+                                <a href="#" class="btn btn-primary btn btn-info">Country Matrix</a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
