--- a/views/exordium.ejs
+++ b/views/exordium.ejs
@@ -21,22 +21,14 @@
 
             <div class="DYP container">
                 <h1>D. Y Patil University</h1>
-                <p>DY Patil University (DYPU), in its 20th Glorious year, continues to value the intellects and growing
-                    keenness of every
-                    scholar and to be ahead of several universities. The university is nationally level accredited with
-                    AICTE. Acknowledged
-                    by major organizations and corporations, here at DYPU, every challenge dealt with enthusiasm rather
-                    than concern,
-                    academics aced with courage rather than fear, and lives made with diligence rather than a blessing.
-                    Young minds at our
-                    universities are thriving in leading enterprises and have been driving their firms ahead with their
-                    brilliant intellect,
-                    astonishing originality, and passion for advancements. The environment assists every individual that
-                    brings out their
-                    finest and unsurpassed work. All our students of ours grind to get their piece of work as a
-                    masterpiece. Our mission is
-                    to cherish mistakes and get the best of our learners so they can enhance their abilities to their
-                    best potential.
+                <p>DY Patil University (DYPU), in its 20th Glorious year, continues to value the intellects and growing keenness of every
+                scholar and to be ahead of several universities. The university is nationally level accredited with AICTE. Acknowledged
+                by major organizations and corporations. Here at DYPU, every challenge is dealt with enthusiasm rather than concern,
+                academics aced with courage rather than fear, and lives made with diligence rather than a blessing. Young minds at our
+                universities are thriving in leading enterprises and have been driving their firms ahead with their brilliant intellect,
+                astonishing originality, and passion for advancements. The environment assists every individual that brings out their
+                finest and unsurpassed work. All our students grind to get their piece of work as a masterpiece. Our mission is to
+                cherish mistakes and get the best of our learners so they can enhance their abilities to their best potential.
                 </p>
             </div>
         </div>
@@ -57,15 +49,11 @@
                 and agree to
                 work on their resolutions.</p>
 
-            <p style="margin: 10px;">D Y Patil University (DYPU) is organizing its first ever MUN and you all are
-                invited to be a part of it. Now, we have
-                got an opportunity to present our great in the DYPIMUN. Our youth is our future and we are going to
-                paint our future,
-                our way. You are being invited to learn and share ideas from a diverse set of experiences and
-                backgrounds where the
-                Executive board, International Press and International Delegates consolidate to learn about diplomacy,
-                international
-                relations, and the United Nations.</p>
+            <p style="margin: 10px;">D Y Patil University (DYPU) is organizing its first ever MUN and you all are invited to be a part of it. Now, we have
+            got an opportunity to present our great in the DYPIMUN. You are being invited to learn and share ideas from a diverse
+            set of experiences and backgrounds where the Executive board, International Press and International Delegates
+            consolidate to learn about diplomacy, international relations, and the United Nations. Our youth is our future and we
+            are going to paint our future, our way.</p>
         </div>
 
         <div class="MUN-img">
@@ -76,31 +64,12 @@
     <section class="missions-sec">
         <div class="mission-text container">
             <h1 id="mission-heading">Our Mission</h1>
-            <p style="margin: 10px;">National Model United Nations (NMUN) is a U.S. 501(c)(3) nonprofit organization
-                that
-                advances
-                understanding
-                of
-                the
-                United Nations and contemporary international issues. We positively affect the lives of participants and
-                prepare
-                them to
-                be better global citizens through quality educational experiences that emphasize collaboration and
-                cooperative
-                resolution of conflict. We envision a world comprised of civically engaged people who strive for
-                peaceful,
-                multilateral
-                conflict resolution and equitable, sustainable human development.</p>
+            <p style="margin: 10px;">Our mission at D Y Patil International Model United Nations (DYPIMUN) is to introduce students to the MUN program that
+            promotes diversity, respect for human dignity and rights, concern for the common good, in addition to permitting
+            students to diplomatically resolve issues at the forefront of international relations. Furthermore, we aim to
+            familiarize these students with what DYP stands for and prepare them to be future leaders who can exercise reason upon
+            knowledge and shape a world of truth, justice, love, and freedom.</p>
 
-            <p style="margin: 10px;">Only a few things in the world can be achieved alone. To be a harbinger of Global
-                Change or
-                to achieve
-                anything
-                for
-                that matter, we need people to cooperate, to understand our vision and be able to negotiate terms to
-                benefit
-                our
-                agenda.</p>
         </div>
     </section>
 
