--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="css/schedule.css" media="screen">
     <%-include("partials/stylesheets")%>
 
-    
 
 
 
-    
-   <title>DYPIMUN</title>
+
+
+        <title>DYPIMUN</title>
 
 
 </head>
@@ -161,10 +161,11 @@
                             <div class="content d-flex flex-column align-items-center justify-content-center mid-right">
                                 <div>
                                     <h3 class="text-white fs-5">UNGA</h3>
-                                    <p class="card-para text-white">Lorem ipsum dolor sit amet consectetur adipisicing
-                                        elit. Explicabo
-                                        sed
-                                        cum neque, rem provident ex. Laboriosam perspiciatis modi eveniet in?</p>
+                                    <p class="card-para text-white">The UN General Assembly (UNGA) is the main
+                                        policy-making. Comprising all Member States, it
+                                        provides a unique forum for discussion of the full spectrum of
+                                        international issues covered by the Charter
+                                        of the UN.</p>
                                     <a href="./commitee#unga" class="btn btn-outline-dark">Know More</a>
                                 </div>
                             </div>
@@ -268,7 +269,7 @@
         <!-- schedule of event -->
         <section class="schedule-sec">
             <div class="width-1140">
-                <h2 class=" head-layout">event schedule</h2>
+                <h2 class=" head-layout">event Itinerary</h2>
                 <div class="tab">
                     <button class="tablinks active" onclick="openCity(event, '26jan')">Day 1</button>
                     <button class="tablinks" onclick="openCity(event, '27jan')">Day 2</button>
