--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -72,7 +72,7 @@
                                 <input required type="text" name="institution" id="institution" placeholder="Institution"
                                     class="inputs">
                                 <input required type="text" name="city_of_residence" id="city_of_residence"
-                                    placeholder="City Of Resident" class="inputs">
+                                    placeholder="City Of Residence" class="inputs">
                                 <input required type="text" name="nationality" id="nationality" placeholder="Nationality"
                                     class="inputs">
                                 <div class="diet">
@@ -157,7 +157,7 @@
                                 <input type="text" name="cod_institution" id="cod-institution" placeholder="Institution"
                                     class="inputs">
                                 <input type="text" name="cod_city_of_residence" id="cod-city_of_residence"
-                                    placeholder="City Of Resident" class="inputs">
+                                    placeholder="City Of Residence" class="inputs">
                                 <input type="text" name="cod_nationality" id="cod-nationality" placeholder="Nationality"
                                     class="inputs">
                                 <div class="cod-diet">
