--- a/views/registration_for_EB.ejs
+++ b/views/registration_for_EB.ejs
@@ -72,10 +72,10 @@
                                         </fieldset>
                                     </div>
 
-                                    <input required type="text" name="institution" id="institution" placeholder="Institution"
-                                        class="inputs">
+                                    <!-- <input required type="text" name="institution" id="institution" placeholder="Institution"
+                                        class="inputs"> -->
                                     <input required type="text" name="city_of_residence" id="city_of_residence"
-                                        placeholder="City Of Resident" class="inputs">
+                                        placeholder="City Of Residence" class="inputs">
                                     <input required type="text" name="nationality" id="nationality" placeholder="Nationality"
                                         class="inputs">
                                     <div class="diet">
