--- a/public/css/committees.css
+++ b/public/css/committees.css
@@ -264,7 +264,7 @@ body {
         position: relative;
         top: 38%;
         border: solid 10px;
-        font-size: 1rem;
+        font-size: 1.1rem;
         max-width: 600px;
     }
     
@@ -310,4 +310,21 @@ body {
         padding: 8px;
     }
     
+}
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#specpol .committees .container .text-container .text-box{
+    padding: 10px;
+}
+
+#specpol .committees .container .text-container{
+    width: 410px;
+    max-height: 460px;
+    margin: 40px 50px 0;
 }
