--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -44,7 +44,7 @@ html{
 }
 
 table{
-    font-size: 15px;
+    font-size: 14px;
     text-align: center;
 }
 
@@ -148,7 +148,7 @@ input:focus{
     outline: none;
 }
 
-input[type=checkbox]:focus{
+input[type=radio]:focus{
     box-shadow: 0px 0px 0px;
     outline: none;
 }
