--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -49,7 +49,7 @@
             </div>
 
             <div class="copyright">
-                <p>Copyright © DYPMUN</p>
+                <p>Copyright © DYPIMUN 2023</p>
             </div>
         </div>
 
