--- a/views/index.ejs
+++ b/views/index.ejs
@@ -392,7 +392,7 @@
                             <br><a href="tel:+919423338493">Areeb Ansari: +91 94233 38493</a>
                         </p>
 
-                        <p class="address-para"><b>Addres: </b>
+                        <p class="address-para"><b>Address: </b>
                             <br>Sr. No. 124 & 126, A/p Ambi MIDC Road, <br>Tal Maval, Talegaon Dabhade, Maharashtra
                             410506
                         </p>
