--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -162,3 +162,81 @@ input[type=radio]:focus{
 .accordion{
     z-index: 0;
 }
+
+.reg-contact{
+       background-color: #f2f2f2; 
+}
+
+.reg-contact-layout{
+    max-width: 870px;
+    margin: auto;
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+}
+
+.reg-width-33{
+    flex: 0 0 33.33333333%;
+    width: 33.33333333%;
+}
+
+.reg-contact-con{
+    display: flex;
+    padding: 10px 10px 3px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.reg-contact-heading{
+    font-weight: 700;
+    font-family: "Abril Fatface";
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    color: #404040;
+}
+
+.reg-contact-para{
+    font-size: 0.7rem;
+    margin: 5px;
+}
+
+.reg-contact-para a{
+    text-decoration: none;
+    color: rgb(106, 0, 72);
+}
+
+@media (min-width:500px){
+    
+    .reg-contact-con .bi{
+        width: 48px;
+        height: 48px;
+        border-radius: 0;
+    }
+
+    .reg-contact-heading{
+        font-size: 1.25rem;
+    }
+
+    .reg-contact-para{
+        font-size: 0.9rem;
+        margin: 5px;
+    }
+}
+
+@media (max-width:500px){
+    
+    .contact-icons{
+        width: 36px;
+        height: 36px;
+        border-radius: 0;
+    }
+    .reg-contact-heading{
+        font-size: 1rem;
+    }
+
+    .reg-contact-para{
+        font-size: 10px;
+        margin: 0px;
+    }
+}
