--- a/views/index.ejs
+++ b/views/index.ejs
@@ -384,7 +384,7 @@
                     <div class="address-layout-inner dis-flex">
                         <h4 class="address-head">Contact us</h4>
                         <p class="address-para"><b>Email: </b>
-                            <br><a href="mailto:dypmun2k23@gmail.com">dypmun2k23@gmail.com</a>
+                            <br><a href="mailto:dypimun.delegateaffairs@gmail.com" id="email-contact">dypimun.delegateaffairs@gmail.com</a>
                         </p>
 
                         <p class="address-para"><b>Contact: </b>
