--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -461,7 +461,7 @@
                     </svg>
                     <h5 class="reg-contact-heading u-text-5">
                         email</h5>
-                    <p class="reg-contact-para"><a href="mailto:dypmun2k23@gmail.com">dypmun2k23@gmail.com</a></p>
+                    <p class="reg-contact-para"><a href="mailto:dypimun.delegateaffairs@gmail.com">dypimun.delegateaffairs</a></p>
                     
                 </div>
             </div>
