--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -226,7 +226,7 @@ input[type=radio]:focus{
 
 @media (max-width:500px){
     
-    .contact-icons{
+    .reg-contact-con .bi{
         width: 36px;
         height: 36px;
         border-radius: 0;
